# qqwing

./: .classpath  .cvsignore  .gitignore  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  Setup.make  autogen.sh  configure.ac  qqwing.cpp  rpmbuild.sh
cpp/: main.cpp  qqwing.cpp  qqwing.hpp
doc/: AUTHORS  ChangeLog  JSREADME  README  license-header-template.txt  qqwing.man
doc/www/: qqwing.html  sudoku.html
doc/www/bte/: about.bte  bugs.bte  cppsource.bte  download.bte  generate.bte  index.bte  install.bte  instructions.bte  javasource.bte  jssource.bte  license.bte  page.bte  play.bte  solve.bte
doc/www/css/: gensolve.css  play.css  style.css  syntax.css
doc/www/md/: about.md  build.md  download.md  generate.md  index.md  instructions.md  software.md  solve.md
doc/www/tmpl/: source.md.tmpl  (+1 more)
java/: .gitignore  Makefile  QQWing.java  QQWing.mf  ensure_version.sh
js/: qqwing.html  qqwing.js
src/cpp/: main.cpp  qqwing.cpp  qqwing.hpp
src/java/: QQWing.java
src/js/: qqwing-html.js  qqwing-main.js  qqwing-object-end.js  qqwing-object-start.js  qqwing-play.js  qqwing-private-instance.js  qqwing-private-static.js  qqwing-public-instance.js  qqwing-public-static.js  qqwing.html  qqwing.js
test/: 0001-solve-simple.sh  0002-solve-easy.sh  0003-solve-intermediate.sh  0004-solve-expert.sh  0005-help.sh  0006-version.sh  0007-about.sh  0008-generate.sh  0009-generate-simple.sh  0010-generate-easy.sh  0011-generate-intermediate.sh  0012-generate-expert.sh  0013-generate-symmetric.sh  0015-cmd-line-error.sh
test/app/: 0001-solve-simple.sh  0002-solve-easy.sh  0002-version.sh  0003-bad-generate-number.sh  0003-no-difficulty.sh  0003-solve-intermediate.sh  0004-solve-expert.sh  0005-help.sh  0007-about.sh  0008-generate.sh  0009-generate-simple.sh  0010-generate-easy.sh  0011-generate-intermediate.sh  0012-generate-expert.sh  0013-generate-symmetric.sh  0014-stats.sh  0015-cmd-line-error.sh  about.sh  bad-difficulty.sh  bad-generate-number.sh  bad-symmetry.sh  cmd-line-error.sh  generate-beginner.sh  generate-compact.sh  generate-easy.sh  generate-expert.sh  generate-intermediate.sh  generate-readable.sh  generate-simple.sh  generate-symmetric.sh  generate.sh  help.sh  no-difficulty.sh  no-symmetry.sh  solve-easy.sh  solve-expert.sh  solve-intermediate.sh  solve-simple.sh  stats.sh  symmetry-flip.sh  (+5 more)
test/helper/: solve.sh
test/java/: QQWingTest.java
test/js/: qqwing-test.js
(+13 files in other folders)
